--- a/2_semestr/1/Columns/Columns/Columns.csproj
+++ b/2_semestr/1/Columns/Columns/Columns.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{14CA3D64-A732-4DC2-B15D-C6838D21FD98}</ProjectGuid>
+    <ProjectGuid>{D41DD447-E842-4C67-99FF-A2436CD57D15}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>towns</RootNamespace>
-    <AssemblyName>towns</AssemblyName>
+    <RootNamespace>Columns</RootNamespace>
+    <AssemblyName>Columns</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="main.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
