--- a/2_semestr/1/factorial/factorial/factorial.csproj
+++ b/2_semestr/1/factorial/factorial/factorial.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7519A465-828A-4591-A530-18D5693F7024}</ProjectGuid>
+    <ProjectGuid>{8176FB14-0E0D-48E0-9ABF-E62F32EEA002}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>factorial</RootNamespace>
-    <AssemblyName>factorial</AssemblyName>
+    <RootNamespace>Factorial</RootNamespace>
+    <AssemblyName>Factorial</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="main.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
