--- a/2_semestr/1/spiral/spiral/spiral.csproj
+++ b/2_semestr/1/spiral/spiral/spiral.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F01DB08C-BCE6-4C3A-BCD1-36E008791358}</ProjectGuid>
+    <ProjectGuid>{9FF5E77F-5F01-41BD-93ED-DB653E5D6F41}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>spiral</RootNamespace>
-    <AssemblyName>spiral</AssemblyName>
+    <RootNamespace>Spiral</RootNamespace>
+    <AssemblyName>Spiral</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="main.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
