Classes in files, refactoring by styleguide

--- a/2_semestr/2/Hash/Hash.csproj
+++ b/2_semestr/2/Hash/Hash.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Hash.cs" />
+    <Compile Include="List.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
