--- a/2_semestr/2/Stack/Stack.csproj
+++ b/2_semestr/2/Stack/Stack.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{CB7DDF66-BF95-4BBF-A7C6-43911E0DC69F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HomeWorks</RootNamespace>
+    <RootNamespace>Program</RootNamespace>
     <AssemblyName>HomeWorks</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Stack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
