--- a/2_semestr/2/List/List.csproj
+++ b/2_semestr/2/List/List.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9FB6BB77-29B2-45C1-A190-1990E9FDB488}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>List</RootNamespace>
+    <RootNamespace>Program</RootNamespace>
     <AssemblyName>List</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="List.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
