Added comments, field "Value" in "Operand", field "Left" and "Right" in "Operator"

--- a/2_semestr/4/Tree/TreeTest/TreeTest.csproj
+++ b/2_semestr/4/Tree/TreeTest/TreeTest.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Tree.csproj">
+    <ProjectReference Include="..\Tree\Tree.csproj">
       <Project>{d7be2d2c-0954-4ca7-ab07-b2095962fa94}</Project>
       <Name>Tree</Name>
     </ProjectReference>
