--- a/2_semestr/4/UniqueList/UniqueList/UniqueList.csproj
+++ b/2_semestr/4/UniqueList/UniqueList/UniqueList.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DeleteNotContainElementException.cs" />
     <Compile Include="DoubleAddingException.cs" />
+    <Compile Include="List.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniqueList.cs" />
