--- a/2_semestr/5/EventLoop/EventLoop.csproj
+++ b/2_semestr/5/EventLoop/EventLoop.csproj
@@ -41,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EventLoop.cs" />
-    <Compile Include="Game.cs" />
+    <Compile Include="CursorEventLoop.cs" />
+    <Compile Include="CursorGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
