--- a/2_semestr/7/2/Set/Set.csproj
+++ b/2_semestr/7/2/Set/Set.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B860D1EB-D223-4D90-9D68-C0343E294305}</ProjectGuid>
+    <ProjectGuid>{64170814-60AF-4266-AD53-676C60F8E659}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Multiplicity</RootNamespace>
-    <AssemblyName>Multiplicity</AssemblyName>
+    <RootNamespace>Set</RootNamespace>
+    <AssemblyName>Set</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,11 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMultiplicityNumerator.cs" />
-    <Compile Include="Multiplicity.cs" />
-    <Compile Include="NotContainElementException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Set.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
